--- a/client/index.html
+++ b/client/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Message Encryption</title>
     <link rel="stylesheet" href='./indec.css'>
+    <link rel="icon" href="./public/favicon-32x32.png" />
 </head>
 <body>
     <div id="root">
-        <h1 class="text-3xl font-bold underline">not render</h1>
     </div>
 
     <script type="module" src="./index.js"></script>
